plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.google.protobuf' version '0.9.6'
}

group = 'az.fitnest'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.1.1"
        mavenBom "io.grpc:grpc-bom:1.79.0"
    }
}

bootJar {
    archiveFileName = "identity-backend.jar"
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // JWT
    implementation "io.jsonwebtoken:jjwt-api:0.13.0"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.13.0"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.13.0"

    // DB (pin for reproducible builds)
    runtimeOnly "org.postgresql:postgresql:42.7.10"

    // Feign (pin; not managed by Boot BOM)
    implementation "io.github.openfeign:feign-hc5:13.9.2"

    // OpenAPI UI
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2"

    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation "org.apache.commons:commons-text:1.15.0"
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.springframework.retry:spring-retry'
    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'

    implementation "com.google.auth:google-auth-library-oauth2-http:1.43.0"
    implementation "com.google.api-client:google-api-client:2.8.1"
    implementation "com.nimbusds:nimbus-jose-jwt:10.8"

    // gRPC + Protobuf
    implementation "net.devh:grpc-server-spring-boot-starter:3.1.0.RELEASE"
    implementation "net.devh:grpc-client-spring-boot-starter:3.1.0.RELEASE"
    implementation "com.google.protobuf:protobuf-java:4.34.0"

    // gRPC versions come from grpc-bom
    implementation "io.grpc:grpc-netty-shaded"
    implementation "io.grpc:grpc-protobuf"
    implementation "io.grpc:grpc-stub"

    // Jakarta annotations (preferred on Boot 4)
    implementation "jakarta.annotation:jakarta.annotation-api"

    compileOnly "org.projectlombok:lombok:1.18.42"
    annotationProcessor "org.projectlombok:lombok:1.18.42"
    testCompileOnly "org.projectlombok:lombok:1.18.42"
    testAnnotationProcessor "org.projectlombok:lombok:1.18.42"

    implementation "com.github.ben-manes.caffeine:caffeine:3.2.3"

    implementation "org.bouncycastle:bcprov-jdk18on:1.83"
    implementation "org.bouncycastle:bcpkix-jdk18on:1.83"
    implementation "org.bouncycastle:bcutil-jdk18on:1.83"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'org.flywaydb:flyway-core'
    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
}

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:4.34.0"
    }
    plugins {
        grpc {
            artifact = "io.grpc:protoc-gen-grpc-java:1.79.0"
        }
    }
    generateProtoTasks {
        all()*.plugins {
            grpc {}
        }
    }
}

sourceSets {
    main {
        java {
            srcDirs 'src/main/java',
                    'build/generated/source/proto/main/java',
                    'build/generated/source/proto/main/grpc'
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
}